# Single-Cohort-Flow-Simulator

./: .gitignore  CLAUDE.md  README.md  app_walkthrough.db  project_plan.md  pyproject.toml  render.yaml  report.md  requirements.txt  run.py
.claude/: settings.json
data/: curriculum.json  instructors.json  simulation_config.json
data/qu_raw/: qu_graduated.csv  qu_registered.csv
docs/: acip_transformation_plan.md  assumptions.md  deployment.md  design_improvements.md  how_it_works.md  input_system_history.md  input_system_plan.md  project_overview.md  roadmap.md  technical_design.md
frontend/: app.js  data.js  flow_timeline.json  index.html  style.css
outputs/reports/: cohort_flow.csv  cohort_summary.csv  course_utilization.csv  flow_timeline.json  monte_carlo.csv  (+1 more)
report/: report.md  report_v2.md
scripts/: analyze_qu_data.py  calibrate_from_history.py  migrate_json_to_db.py  size_sections.py
src/: analytics.py  api.py  auth.py  calibration.py  capacity.py  curriculum_validation.py  datasource.py  db.py  db_models.py  livesim.py  montecarlo.py  rules.py  scenarios.py  service.py  simulator.py  utils.py  visualize.py
tests/: conftest.py  test_api.py  test_auth.py  test_calibration.py  test_capacity.py  test_capacity_planning.py  test_curriculum_settings.py  test_db.py  test_determinism.py  test_graduation.py  test_historical_transcripts.py  test_livesim.py  test_multicohort.py  test_optional_terms.py  test_plans.py  test_prerequisites.py  test_probation.py  test_rules.py  test_scenarios.py  test_service.py
web/: .env.local.example  next.config.ts
(+79 files in other folders)
