[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cs-curriculum-simulator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "networkx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
